[package]
name = "LP_IP"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
rayon = "1.5.1"
matrixmultiply = "0.3.1"
ndarray = { version = "0.15.3", features = ["rayon", "matrixmultiply-threading"] }